--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "presentationbuttonai",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "bun server.ts",
+    "dev": "bun --watch server.ts"
   },
   "author": "",
   "license": "ISC",
